--- a/qutv/Static/css/base.css
+++ b/qutv/Static/css/base.css
@@ -84,7 +84,7 @@ body {
 
 .h{ height:143px; width:100%; background:url(http://ww1.sinaimg.cn/large/005GPQHggy1fpp4au0qhdg300d03z036.gif) repeat-x; margin-bottom:10px;}
 /*
-.h{ height:143px; width:100%; background:url(/Static/image/header_bg.gif) repeat-x; margin-bottom:10px;}
+.h{ height:143px; width:100%; background:url(https://cdn.jsdelivr.net/gh/liyilike/cdn@latest/qutv/Static/image/header_bg.gif) repeat-x; margin-bottom:10px;}
 */
 
 .header{ width:1190px; height:24px; margin:0 auto;}
@@ -116,10 +116,10 @@ body {
 .tde_fxd{ height:41px; float:left; width:48px; padding-top:40px; color:#a7a7a7;}
 .tde_weibo{ height:49px; padding-right:9px; padding-top:32px; float:left;}
 .so{ width:153px; height:51px; float:left; overflow:hidden; padding:30px 0 0 16px;}
-.souk{ width:130px; height:29px;background:url(/Static/image/so_bg.gif) no-repeat;}
+.souk{ width:130px; height:29px;background:url(https://cdn.jsdelivr.net/gh/liyilike/cdn@latest/qutv/Static/image/so_bg.gif) no-repeat;}
 
 .search_box{ width:101px; height:29px; line-height:29px; color:#727272; border:none;  padding-left:7px; color:#727272; background:none; float:left;}
-.soso{ width:13px; height:13px; background:url(/Static/image/so.gif) no-repeat; float:left; margin-top:8px; border:none; cursor:pointer;}
+.soso{ width:13px; height:13px; background:url(https://cdn.jsdelivr.net/gh/liyilike/cdn@latest/qutv/Static/image/so.gif) no-repeat; float:left; margin-top:8px; border:none; cursor:pointer;}
 
 
 
@@ -147,15 +147,15 @@ body {
 .menu2_wz a:hover{ color:#c00;}
 .menu2_so{ width:228px; height:24px; border:1px solid #dddddd; float:right; margin-top:28px;}
 .search_box2{ width:198px; height:24px; line-height:24px; color:#727272; border:none;  padding-left:7px; color:#727272; background:none; float:left;}
-.soso2{ width:16px; height:16px; background:url(/Static/image/list_06.gif) no-repeat; float:left; margin-top:4px; border:none; cursor:pointer;}
+.soso2{ width:16px; height:16px; background:url(https://cdn.jsdelivr.net/gh/liyilike/cdn@latest/qutv/Static/image/list_06.gif) no-repeat; float:left; margin-top:4px; border:none; cursor:pointer;}
 
 
 /*搜索头部*/
 .so_menu{ width:960px; margin:0 auto; height:81px;}
 .so_menu_logo{ height:55px; float:left; padding-top:26px; padding-right:56px;}
 .so_kuans{ width:383px; float:left; padding-top:28px; height:53px;}
-.so_kuans_left{ width:311px; height:32px; float:left; border:none; background:url(/Static/image/so_menu_k.gif) no-repeat; line-height:32px; color:#333; padding-left:5px;}
-.so_kuans_right{ width:67px; height:32px; float:left; background:url(/Static/image/so_menu_so.gif) no-repeat; border:none; cursor:pointer; }
+.so_kuans_left{ width:311px; height:32px; float:left; border:none; background:url(https://cdn.jsdelivr.net/gh/liyilike/cdn@latest/qutv/Static/image/so_menu_k.gif) no-repeat; line-height:32px; color:#333; padding-left:5px;}
+.so_kuans_right{ width:67px; height:32px; float:left; background:url(https://cdn.jsdelivr.net/gh/liyilike/cdn@latest/qutv/Static/image/so_menu_so.gif) no-repeat; border:none; cursor:pointer; }
 
 
 /*首页加栏目加内容css*/
@@ -185,14 +185,14 @@ fieldset{border:none;}
 .collr .coll{float:left;_margin-right:-3px;}
 .collr .coll img{vertical-align:top;}
 .pitch{margin-bottom:10px;}
-body{background:#F6F6F6 url(/Static/image/body.png) 0 9px;min-width:990px;}
+body{background:#F6F6F6 url(https://cdn.jsdelivr.net/gh/liyilike/cdn@latest/qutv/Static/image/body.png) 0 9px;min-width:990px;}
 .history-list .del,.nav-bar .nav-dl .dd{background:url(../img/ddzhibo.png) no-repeat;}
-.ico,.search-but,.t-list-syb .t-item a{background:url(/Static/image/ico.png) no-repeat;}
+.ico,.search-but,.t-list-syb .t-item a{background:url(https://cdn.jsdelivr.net/gh/liyilike/cdn@latest/qutv/Static/image/ico.png) no-repeat;}
 .ico-loading-sya{background:url(../img/loading2.gif) no-repeat;}
 .tv,.tv-s{color:#DDD;font-style:normal;font-weight:normal;font-family:"\5B8B\4F53";text-shadow:none;}
 .tv-s{font-size:14px;vertical-align:middle;padding:0 3px;text-shadow:none;}
 .tv{display:inline;font-size:12px;font-family:Verdana;position:relative;top:-2px;}
-.btn,.btn .s{background:url(/Static/image/btn.png) no-repeat;}
+.btn,.btn .s{background:url(https://cdn.jsdelivr.net/gh/liyilike/cdn@latest/qutv/Static/image/btn.png) no-repeat;}
 .btn{display:inline-block;overflow:hidden;text-align:center;vertical-align:top;cursor:pointer;}
 .btn:hover{text-decoration:none;}
 .btn .s{display:inline-block;vertical-align:top;}
@@ -319,7 +319,7 @@ to{background-position:-70px -160px;}
 #header .site-nav-bd{zoom:1;}
 #header .logo{position:absolute;left:0;top:3px;width:198px;text-align:center;overflow:hidden;}
 /*
-#header .logo a{background:url(/Static/images/gen.svg) no-repeat;display:block;height:35px;line-height:35px;text-indent:-999em;}
+#header .logo a{background:url(https://cdn.jsdelivr.net/gh/liyilike/cdn@latest/qutv/Static/images/gen.svg) no-repeat;display:block;height:35px;line-height:35px;text-indent:-999em;}
 */
 .search-panel{position:absolute;right:120px;top:0;}
 .search-panel .search-form{margin-top:7px;}
